--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 flask = "^3.0.3"
+python-dotenv = "^1.0.1"
+psycopg2-binary = "^2.9.9"
+validators = "^0.33.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -15,7 +18,6 @@ gunicorn = "^22.0.0"
 flake8 = "^7.1.1"
 pytest = "^8.3.2"
 pytest-cov = "^5.0.0"
-python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
