--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Gaevskii.V <gaevskii.v95@gmail.com>"]
 readme = "README.md"
+packages = [{include = "page_analyzer"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -13,10 +14,10 @@ psycopg2-binary = "^2.9.9"
 validators = "^0.33.0"
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
+gunicorn = "^23.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
-gunicorn = "^22.0.0"
 flake8 = "^7.1.1"
 pytest = "^8.3.2"
 pytest-cov = "^5.0.0"
